fixed profile banner and profile img and spacing in tweet profile img. must fix profile username

--- a/lab2/index.css
+++ b/lab2/index.css
@@ -57,8 +57,8 @@ body {
   border-color: rgb(62, 194, 255);
   border-width: 3px;
   border: solid;
-  border-radius: 15px;
-  padding: 5px 20px 5px 20px;
+  border-radius: 18px;
+  padding: 5px 15px 5px 15px;
   color: rgb(255, 255, 255);
   font-weight: bold;
   font-size: 15px;
@@ -142,7 +142,10 @@ body {
 .banner {
   /* z-index: 50; */
   position: relative; 
-  padding: 20px;
+  padding-top: 25px;
+  padding-bottom: 20px;
+  padding-right: 40px;
+  padding-left: 40px;
   background-color: black;
 }
 
@@ -188,13 +191,22 @@ body {
 
 .profile-img {
   border-radius: 50%;
-  width: 48px;
-  height: 48px;
+  width: 60px;
+  height: 60px;
   border: solid;
   border-color: white;
   /*margin-left: 10px;
   margin-top: 15px;
   */
+}
+
+.tweet-profile-img {
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  margin-top: 12px;
+  margin-left: 10px;
+  margin-right: 5px;
 }
 
 .name-username {
